# agent

./: 2HOUR_DEPLOYMENT_REPORT.md  30MIN_DEPLOYMENT_REPORT.md  AGENTS.md  AGENTS_v2.md  AI_Agent_Evaluation_System.md  BROWSER_AUTOMATION_GUIDE.md  CLAWHUB_DELIVERY_REPORT.md  COMPETITOR_MONITOR_CONFIG.md  CONSTITUTIONAL_PROMPT_TEMPLATE.md  DEEP_RESEARCH_LABS_REPORT.md  DEPLOYMENT_READINESS_CHECKLIST.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_REPORT_v3.md  DEPLOYMENT_SUMMARY.txt  DOCS_UPGRADE_CHECKLIST.md  DRIFT_DETECTION_SYSTEM.md  DRIFT_DETECTION_UPGRADE_REPORT.md  EMOTION.md  EMOTION_MATRIX_README.md  EMOTION_SYSTEM_DEPLOYMENT_REPORT.md  EMOTION_SYSTEM_INTEGRATION.md  EMOTION_TASK_MATRIX.md  EMOTION_TASK_MATRIX_REPORT.md  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_INTEGRATION.md  FINAL_COMPREHENSIVE_REPORT.md  FINAL_INTEGRATION_REPORT.md  FUTURE_STRATEGY.md  GNN_Research_Report.md  HEARTBEAT.md  IDENTITY.md  IDENTITY_v4_DESIGN.md  INTEGRATION_FINAL_REPORT.md  INTEGRATION_TEST_REPORT.md  LEADING_MEMORY_SYSTEM_RESEARCH.md  MEMORY.md  MULTIMODAL_PERCEPTION_ARCHITECTURE.py  MULTIMODAL_PERSONA_PLAN.md  MULTI_AGENT_SYSTEM_V2_README.md  OPTIMIZATION_EXECUTION_REPORT.md  (+130 more)
capabilities/: ALGORITHM_SOUL.md  CODE_DEV_CAPABILITY_SYSTEM.md  INFLUENCE_FRAMEWORK.md  SOFTWARE_ENGINEERING.md  execution_excellence_system.md
causal_reasoning/: PROJECT_SUMMARY.md  README.md  causal_reasoner.py  causal_reasoning_research.md  examples.py  mindmap.md  test_causal_reasoner.py
skills/meeting-minutes/: README.md  SKILL.md  meeting_minutes.py  pyproject.toml  test_meeting_minutes.py
(+120 files in other folders)
